Refactored with Spring WebFlux